base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shuttleday-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: shuttleday-frontend
  template:
    metadata:
      labels:
        app: shuttleday-frontend
    spec:
      containers:
      - name: api
        # imagePullSecret not required because it's a public image
        image: ghcr.io/shuttleday/frontend:latest
        imagePullPolicy: Always 
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shuttleday-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: shuttleday-api
  template:
    metadata:
      labels:
        app: shuttleday-api
    spec:
      containers:
      - name: api
        # imagePullSecret not required because it's a public image
        image: ghcr.io/shuttleday/api:1.5.3
        imagePullPolicy: Always 
        ports:
        - containerPort: 2600
